# syndicatfx

./: README.md  configure.ac
bfsoundlib/include/: aildebug.h  mssal.h
bfsoundlib/src/: miscutil.c  mssxmidi.c
conf/: wrappers_game.conf
lang/: Makefile.am  guitext_eng.pot  guitext_fre.po  guitext_ger.po  guitext_ita.po  guitext_pol.po  guitext_por.po  guitext_spa.po  introtext_eng.pot  introtext_fre.po  introtext_ger.po  introtext_ita.po  introtext_por.po
src/: display.c  game.c  game.h  game_data.c  game_data.h  guitext.c  guitext.h  main.c  mouse.h  sound.h  syndre.sx
util/: install
